# ncm-rs

./: .gitignore  API_STATUS.md  Cargo.toml  LICENSE  README.md  api-status.json
.github/workflows/: ci.yml  daily_check.yml
doc/en/: API_STATUS.md  README.md
examples/: cloud_search.rs  custom_client.rs  health_check.rs  playlist_detail.rs  song_url.rs
src/: client.rs  error.rs  lib.rs  main.rs  server.rs  types.rs
src/utils/: crypto.rs
