[package]
name = "ncm-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
aes = "0.8"
cbc = "0.1"
ecb = "0.1"
block-padding = "0.3"
rsa = "0.9"
md5 = "0.7"
rand = "0.8"
hex = "0.4"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-bigint-dig = "0.8"
thiserror = "2.0.17"
reqwest = { version = "0.12.26", features = ["json", "cookies", "gzip", "socks"] }
tokio = { version = "1.48.0", features = ["full"] }
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
clap = { version = "4.5.53", features = ["derive"] }
serde_urlencoded = "0.7.1"

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
